gap fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,7 +289,6 @@ footer {
 
     #info {
         text-align: center;
-        margin-bottom: 100px;
     }
 }
 
